# offline-policy-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 00_ipinyou_data_audit_and_setup.ipynb  01_ipinyou_panel_build.ipynb  02_conservative_shortlist_construction.ipynb  03_support_localized_threshold_resolution.ipynb  04_validation_readiness_transfer_segment_safety.ipynb  05_appendix_b_robustness_and_diagnostics.ipynb  06_q_localized_policy_selection.ipynb
src/: __init__.py  config.py  data_access.py  decision_rules.py  figures.py  ipinyou_panel.py  localized_replay.py  lower_bounds.py  paper_experiments.py  policy_catalog.py  progress.py  replay.py  segment_safety.py  support.py  tables.py  threshold_resolution.py  validation.py
